objects/EntitySubscription__c.object
<CustomObject>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriberId__c</fullName>
        <label>SubscriberId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>EntitySubscription</label>
    <nameField>
        <label>EntitySubscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EntitySubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>